# melody-extraction-api

./: Dockerfile  main.py  pyproject.toml
extractor/: audio_utils.py  melody_extractor.py
